--- a/style.css
+++ b/style.css
@@ -15,25 +15,25 @@ body {
 .hpimg-1 {
   width: 100%;
   top: 40px;
-  height: 95vh;
+  height: 100vh;
   background-image: url("/assets/images/sadness-africa.jpg"); }
 
 .hpimg-2 {
   width: 100%;
-  height: 95vh;
+  height: auto;
   background-image: linear-gradient(to right, #D4D3D3, #FDFCFC, #FDFCFC, #DBDADA);
   top: 40px; }
 
 .hpimg-3 {
   width: 100%;
-  height: 95vh;
+  height: auto;
   background-image: linear-gradient(#FFFFFF);
   top: 40px; }
 
 .hpimg-4 {
   width: 100%;
-  height: 95vh;
-  background-image: linear-gradient(to right, #D4D3D3, #FDFCFC, #FDFCFC, #DBDADA);
+  height: auto;
+  background-image: url("/assets/images/african-orphan.jpg");
   top: 40px; }
 
 .hpimg-5 {
@@ -42,18 +42,28 @@ body {
   height: 95vh;
   background-image: url("/assets/images/sadness-africa.jpg"); }
 
-.section2 {
-  padding: 3em 0;
+.section1 {
+  padding: 1em 0;
   position: relative; }
 
-.header {
-  margin-top: 0; }
+.headerGDP {
+  color: white;
+  top: 7px; }
 
-.text {
+.text, .reactText {
   font-size: 1em;
   margin-top: 5%;
   padding-right: 10px;
-  position: absolute; }
+  position: relative; }
+
+.reactText {
+  margin: 0; }
+
+.textGDP {
+  font-size: 1em;
+  top: 82px;
+  padding-right: 10px;
+  color: white; }
 
 .bottomLine {
   width: 100%;
@@ -64,29 +74,48 @@ body {
   display: block;
   margin-top: 30px; }
 
-#hptextimg-1, #hptextimg-2, #hptextimg-3 {
+#hptextimg-1, #hptextimg-2, #hptextimg-3, #hptextimg-4, .MotherTeresaImg {
   background-size: 100% 100%;
-  position: absolute; }
+  position: relative; }
 
 #hptextimg-1 {
   width: 60%;
-  height: 130px;
-  top: 172px;
-  background-image: url(/assets/images/african-orphan.jpg); }
+  height: 120px;
+  top: 66px;
+  background-image: url(/assets/images/Asia-poverty.jpg); }
 
 #hptextimg-2 {
   width: 50%;
   height: 112px;
-  top: 236px;
-  right: 14px;
+  top: -145px;
+  right: -49%;
   background-image: url(/assets/images/india-kids.jpg); }
 
 #hptextimg-3 {
-  width: 90%;
-  height: 156px;
-  top: 146px;
-  right: 5%;
-  background-image: url(/assets/images/south_africa_support.jpg); }
+  width: 60%;
+  height: 130px;
+  top: -29px;
+  background-image: url("/assets/images/Starving -African-Child.jpg"); }
+
+#hptextimg-4 {
+  width: 50%;
+  height: 112px;
+  top: -49px;
+  right: -49%;
+  background-image: url(/assets/images/starvation.jpg); }
+
+.MotherTeresaQuote {
+  top: 33px;
+  text-transform: uppercase;
+  color: white; }
+
+.MotherTeresaImg {
+  width: 50%;
+  height: 100px;
+  left: 52%;
+  z-index: -0;
+  border-radius: 20px;
+  background-image: url(/assets/images/Mother-Teresa.jpg); }
 
 .textHP1 {
   color: black;
@@ -98,42 +127,125 @@ body {
   padding-top: 150px;
   padding-left: 10px; }
 
+.jumbotron {
+  opacity: .5;
+  height: 500px;
+  position: relative; }
+
 @media (min-width: 576px) {
   .textHP1 {
     padding-top: 33%; }
 
   #hptextimg-1 {
-    width: 40%;
-    height: 100px;
+    width: 47%;
+    height: 156px;
+    left: 40px;
+    position: relative;
     top: 24%;
-    right: 0;
-    background-image: url("/assets/images/african-orphan.jpg"); }
+    z-index: 1; }
 
   #hptextimg-2 {
+    width: 43%;
+    height: 147px;
+    top: -176px;
+    position: relative;
+    z-index: 0; }
+
+  #hptextimg-3 {
+    width: 47%;
+    height: 156px;
+    left: 40px;
+    position: relative;
+    top: 24%;
+    z-index: 1; }
+
+  #hptextimg-4 {
+    width: 43%;
+    height: 147px;
+    top: -8%;
+    position: relative;
+    z-index: 0; }
+
+  .headerGDP {
+    color: white;
+    position: relative;
+    top: 56px; }
+
+  .textGDP {
+    font-size: 26px;
+    padding-top: 0%;
+    position: relative;
+    padding-right: 10px;
+    color: white; }
+
+  .MotherTeresaQuote {
+    top: 76px;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: white;
+    position: relative;
+    padding-bottom: 37px; }
+
+  .MotherTeresaImg {
     width: 32%;
-    height: 96px;
-    right: 0%;
-    top: 34%;
-    background-image: url("/assets/images/india-kids.jpg"); } }
+    height: 129px;
+    top: 1px;
+    left: 70%;
+    border-radius: 20px; } }
 @media (min-width: 768px) {
   #hptextimg-1 {
-    top: 28%; }
+    height: 239px;
+    top: 38%;
+    left: 72px;
+    position: relative; }
 
   #hptextimg-2 {
-    top: 33%; }
+    top: -53%;
+    height: 230px;
+    position: relative; }
+
+  #hptextimg-3 {
+    height: 239px;
+    top: 8%;
+    left: 72px;
+    position: relative; }
+
+  #hptextimg-4 {
+    top: -15%;
+    height: 230px;
+    position: relative; }
 
   .header {
-    margin-top: 105px; }
+    margin-top: 9px; }
 
   .text {
-    font-size: 1em;
-    width: 50%;
+    font-size: 26px;
     margin-top: 5%;
     padding-right: 10px;
-    position: absolute; }
+    position: relative; }
 
   .textHP1 {
-    font-size: 26px; } }
+    font-size: 26px; }
+
+  .textGDP {
+    font-size: 26px;
+    top: 144px;
+    padding-right: 10px;
+    position: relative;
+    color: white; }
+
+  .MotherTeresaQuote {
+    font-size: 26px;
+    position: relative;
+    top: 156px;
+    padding-bottom: 197px; }
+
+  .MotherTeresaImg {
+    width: 54%;
+    height: 325px;
+    position: relative;
+    left: 57%;
+    top: -39px; } }
 @media (min-width: 1200px) {
   #orphan {
     width: 30%;
