--- a/style.css
+++ b/style.css
@@ -130,6 +130,52 @@ body {
 .more {
   display: none; }
 
+#map {
+  height: 400px;
+  width: 100%; }
+
+/*Statistics Page*/
+.chartStyling1 {
+  margin: 50px 10px; }
+
+.statisticsHeading {
+  margin: 50px 10px; }
+
+.chartText1 {
+  margin-left: 10%; }
+
+/*Charity Page*/
+.charitiesH1 {
+  padding-top: 50px; }
+
+.charity-1-collapse {
+  width: 100%;
+  font-size: 15px;
+  background-color: lightblue;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  border: none; }
+
+.charity-1-collapse:hover {
+  background-color: blue;
+  transition: 0.2s ease-in-out; }
+
+.charity1-text {
+  padding: 0 18px;
+  white-space: pre-line;
+  max-height: 0;
+  overflow: hidden;
+  margin-bottom: 10px;
+  transition: max-height 0.2s ease-in-out;
+  background-color: #f1f1f1; }
+
+.charity-1-collapse:after {
+  content: '\02795';
+  font-size: 15px;
+  float: right;
+  margin-left: 5px; }
+
 @media (min-width: 576px) {
   .textHP1 {
     padding-top: 33%; }
