--- a/style.scss
+++ b/style.scss
@@ -218,9 +218,11 @@ $img-height) {
 
 
 /*Charity Page*/
+
 .charitiesH1 {
     padding-top: 50px;
 }
+
 .charity-1-collapse {
     width: 100%;
     font-size: 15px;
@@ -256,6 +258,36 @@ $img-height) {
 .symbol:after {
     content: "\2796";
 }
+
+.charityAsiaPic1 {
+    width: 100%;
+    height: 74vh;
+    background-size: cover;
+    background-position: center;
+    background-image: url('assets/images/Charity-Images/India-Poverty.jpg');
+
+}
+
+.charityAfricaPic {
+    width: 100%;
+    height: 74vh;
+    background-size: cover;
+    background-position: center;
+    background-image: url('assets/images/Charity-Images/Children-Uganda.jpg');
+}
+
+.charityAsiaPic2 {
+    width: 100%;
+    height: 74vh;
+    background-size: cover;
+    background-position: center;
+    background-image: url('assets/images/Charity-Images/Jakarta-Slum.jpeg');
+}
+
+.carousel-inner {
+    margin-bottom: 30px;
+}
+
 
 
 @media (min-width: 576px) {
