Added pictures into the bootstrap carousels in donate.html, included markers of the countries that the charities support, on the map and started to set up contact.html with EmailJS.

--- a/assets/scss/components/navigation.scss
+++ b/assets/scss/components/navigation.scss
@@ -1,3 +1,7 @@
 .hvr-shutter-out-vertical {
-    background-color: #ffffff;
+    background-color: $white;
+}
+
+.navbar-light {
+    background-color: $white;
 }
