--- a/assets/scss/helpers/variables.scss
+++ b/assets/scss/helpers/variables.scss
@@ -1,127 +1,11 @@
-/*Homepage*/
+$white: #FFFFFF;
+$blue: #0188FE;
+$lightBlue: #01C3FE;
+$skyblue: #D6FEFE;
+$donateBodyBlue: #2098d1;
+$HPBGgrey: linear-gradient(to right, #D4D3D3, #FDFCFC, #FDFCFC, #DBDADA);
+$orange: #FEB624;
+$lightGreen: #01FEA1;
+$green: #01FE55;
+$black: #000000;
 
-%background {
-    position: relative;
-    background: {
-        size: 132% 100%;
-        position: center;
-        attachment: fixed;
-        repeat: no-repeat;
-
-
-    }
-}
-
-.hpimg-1 {
-    @extend %background,
-}
-
-
-.hpimg-2 {
-    @extend %background,
-}
-
-.hpimg-3 {
-    @extend %background,
-}
-
-.hpimg-4 {
-    @extend %background,
-}
-
-.hpimg-5 {
-    @extend %background,
-}
-
-%textStyling {
-    font-size: 1em;
-    margin-top: 5%;
-    padding-right: 10px;
-    position: relative;
-}
-
-.text {
-    @extend %textStyling
-}
-
-%regularBGSizeAndPos {
-    background-size: 100% 100%;
-    position: relative;
-}
-
-#hptextimg-1 {
-    @extend %regularBGSizeAndPos
-}
-
-#hptextimg-2 {
-    @extend %regularBGSizeAndPos
-}
-
-#hptextimg-3 {
-    @extend %regularBGSizeAndPos
-}
-
-#hptextimg-4 {
-    @extend %regularBGSizeAndPos
-}
-
-.MotherTeresaImg {
-    @extend %regularBGSizeAndPos
-}
-
-
-
-
-/*Statistics Page*/
-
-%chartMargin {
-    margin: 50px 10px
-}
-
-.chartStyling1 {
-    @extend %chartMargin
-}
-
-.statisticsHeading {
-    @extend %chartMargin
-}
-
-.chartText1 {
-    @extend %chartMargin
-}
-
-
-
-
-/*Charity Page*/
-%charityCarouselPics {
-    width: 100%;
-    height: 74vh;
-    background-size: cover;
-    background-position: center;
-}
-
-.charityAsiaPic1 {
-    @extend %charityCarouselPics;
-    background-image: url('../images/Charity-Images/India-Poverty.jpg');
-
-}
-
-.charityAfricaPic {
-    @extend %charityCarouselPics;
-    background-image: url('../images/Charity-Images/Children-Uganda.jpg');
-}
-
-.charityAsiaPic2 {
-    @extend %charityCarouselPics;
-    background-image: url('../images/Charity-Images/Jakarta-Slum.jpeg');
-}
-
-%body {
-    padding: 0;
-    margin: 0;
-}
-
-body {
-    @extend %body
-}
