--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,15 +1,16 @@
-@import "components/buttons.scss";
-@import "components/navigation.scss";
-
-@import "helpers/colors.scss";
+@import "helpers/variables.scss";
 @import "helpers/mixins.scss";
 @import "helpers/media-queries.scss";
-@import "helpers/variables.scss";
+@import "helpers/helpers.scss";
+
+@import "components/buttons.scss";
+@import "components/navigation.scss";
 
 @import "pages/charities.scss";
 @import "pages/homepage.scss";
 @import "pages/statistics.scss";
 @import "pages/map.scss";
+@import "pages/contact.scss"
 
 
 
