Reorganised the SCSS codes into different files and folders, added information of charities to donation.html and edited the design of that page, edited the responsiveness and design of index.html, gave each marker in map.html information windows and edited the data for statistics.html.

--- a/assets/scss/components/navigation.scss
+++ b/assets/scss/components/navigation.scss
@@ -5,3 +5,8 @@
 .navbar-light {
     background-color: $white;
 }
+
+.navBrandColor:hover {
+    transition: 0.2s;
+    color: $navbarBlue!important;
+}
