--- a/assets/scss/helpers/mixins.scss
+++ b/assets/scss/helpers/mixins.scss
@@ -6,37 +6,26 @@
 .hpimg-1 {
     width: 100%;
     top: 40px;
-    @include box(100vh,
+    @include box(98vh,
     url('../images/sadness-africa.jpg'));
-}
-
-
-.hpimg-2 {
-    width: 100%;
-    @include box(auto,
-    $HPBGgrey);
-    top: 40px;
+    background-size: 132% 100%;
 }
 
 .hpimg-3 {
     width: 100%;
     @include box(auto,
-    linear-gradient($HPBGgrey));
-    top: 40px;
-}
-
-.hpimg-4 {
-    width: 100%;
-    @include box(auto,
     url('../images/african-orphan.jpg'));
     top: 40px;
+    background-size: cover;
 }
+
 
 .hpimg-5 {
     width: 100%;
     top: 40px;
-    @include box(95vh,
+    @include box(97vh,
     url('../images/sadness-africa.jpg'));
+    background-size: 132% 100%;
 }
 
 
@@ -57,7 +46,7 @@ $img-height) {
 #hptextimg-2 {
     @include box(50%,
     112px);
-    top: -145px;
+    top: -132px;
     right: -49%;
     background-image: url(../images/india-kids.jpg);
 }
