--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1,32 +1,23 @@
 .hpimg-1 {
   width: 100%;
   top: 40px;
-  height: 100vh;
-  background-image: url("../images/sadness-africa.jpg"); }
-
-.hpimg-2 {
-  width: 100%;
-  height: auto;
-  background-image: linear-gradient(to right, #D4D3D3, #FDFCFC, #FDFCFC, #DBDADA);
-  top: 40px; }
+  height: 98vh;
+  background-image: url("../images/sadness-africa.jpg");
+  background-size: 132% 100%; }
 
 .hpimg-3 {
   width: 100%;
   height: auto;
-  background-image: linear-gradient(linear-gradient(to right, #D4D3D3, #FDFCFC, #FDFCFC, #DBDADA));
-  top: 40px; }
-
-.hpimg-4 {
-  width: 100%;
-  height: auto;
   background-image: url("../images/african-orphan.jpg");
-  top: 40px; }
+  top: 40px;
+  background-size: cover; }
 
 .hpimg-5 {
   width: 100%;
   top: 40px;
-  height: 95vh;
-  background-image: url("../images/sadness-africa.jpg"); }
+  height: 97vh;
+  background-image: url("../images/sadness-africa.jpg");
+  background-size: 132% 100%; }
 
 #hptextimg-1 {
   width: 60%;
@@ -37,7 +28,7 @@
 #hptextimg-2 {
   width: 50%;
   height: 112px;
-  top: -145px;
+  top: -132px;
   right: -49%;
   background-image: url(../images/india-kids.jpg); }
 
@@ -62,143 +53,9 @@
   border-radius: 20px;
   background-image: url(../images/Mother-Teresa.jpg); }
 
-@media (min-width: 576px) {
-  /*Homepage*/
-  .textHP1 {
-    padding-top: 33%; }
-
-  #hptextimg-1 {
-    width: 47%;
-    height: 156px;
-    left: 40px;
-    position: relative;
-    top: 24%;
-    z-index: 1; }
-
-  #hptextimg-2 {
-    width: 43%;
-    height: 147px;
-    top: -176px;
-    position: relative;
-    z-index: 0; }
-
-  #hptextimg-3 {
-    width: 47%;
-    height: 156px;
-    left: 40px;
-    position: relative;
-    top: 24%;
-    z-index: 1; }
-
-  #hptextimg-4 {
-    width: 43%;
-    height: 147px;
-    top: -8%;
-    position: relative;
-    z-index: 0; }
-
-  .headerGDP {
-    color: #FFFFFF;
-    position: relative;
-    top: 56px; }
-
-  .textGDP {
-    font-size: 26px;
-    padding-top: 0%;
-    position: relative;
-    padding-right: 10px;
-    color: #FFFFFF; }
-
-  .MotherTeresaQuote {
-    top: 76px;
-    font-size: 20px;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    position: relative;
-    padding-bottom: 37px; }
-
-  .MotherTeresaImg {
-    width: 32%;
-    height: 129px;
-    top: 1px;
-    left: 70%;
-    border-radius: 20px; } }
-@media (min-width: 768px) {
-  /*Homepage*/
-  #hptextimg-1 {
-    height: 239px;
-    top: 38%;
-    left: 72px;
-    position: relative; }
-
-  #hptextimg-2 {
-    top: -53%;
-    height: 230px;
-    position: relative; }
-
-  #hptextimg-3 {
-    height: 239px;
-    top: 8%;
-    left: 72px;
-    position: relative; }
-
-  #hptextimg-4 {
-    top: -15%;
-    height: 230px;
-    position: relative; }
-
-  .header {
-    margin-top: 9px; }
-
-  .text {
-    font-size: 26px;
-    margin-top: 5%;
-    padding-right: 10px;
-    position: relative; }
-
-  .textHP1 {
-    font-size: 26px; }
-
-  .textGDP {
-    font-size: 26px;
-    top: 144px;
-    padding-right: 10px;
-    position: relative;
-    color: #FFFFFF; }
-
-  .MotherTeresaQuote {
-    font-size: 26px;
-    position: relative;
-    top: 156px;
-    padding-bottom: 197px; }
-
-  .MotherTeresaImg {
-    width: 54%;
-    height: 325px;
-    position: relative;
-    left: 57%;
-    top: -39px; } }
-@media (min-width: 1200px) {
-  /*Homepage*/
-  #orphan {
-    width: 30%;
-    top: 7%; }
-
-  #kids {
-    top: 15%; }
-
-  .text {
-    font-size: 30px; }
-
-  .textHP1 {
-    margin-top: 10%;
-    padding-top: 100px;
-    padding-left: 40px;
-    font-size: 26px; } }
 /*Homepage*/
 .hpimg-1, .hpimg-2, .hpimg-3, .hpimg-4, .hpimg-5 {
   position: relative;
-  background-size: 132% 100%;
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat; }
@@ -254,7 +111,6 @@
   font-size: 15px;
   background-color: #01C3FE;
   color: #FFFFFF;
-  cursor: pointer;
   padding: 18px;
   border: none; }
 
@@ -276,20 +132,25 @@
 .navbar-light {
   background-color: #FFFFFF; }
 
+.navBrandColor:hover {
+  transition: 0.2s;
+  color: #007bff !important; }
+
 #donateBody {
   background-color: #2098d1; }
 
 .charitiesH1 {
-  padding-top: 60px; }
+  padding: 28px 0;
+  color: white; }
 
 .charity1-text {
   padding: 0 18px;
   white-space: pre-line;
   max-height: 0;
-  overflow: hidden;
+  overflow: scroll;
   margin-bottom: 10px;
   transition: max-height 0.2s ease-in-out;
-  background-color: #f1f1f1; }
+  background-color: #FFFFFF; }
 
 .charity-1-collapse:after {
   content: '\02795';
@@ -301,7 +162,11 @@
   content: "\2796"; }
 
 .carousel-inner {
+  padding-top: 55px;
   margin-bottom: 10px; }
+
+.donatePageHeadings {
+  color: #FFFFFF; }
 
 body {
   padding: 0;
@@ -331,14 +196,15 @@ body {
   margin-top: 30px; }
 
 .MotherTeresaQuote {
-  top: 33px;
+  top: 115px;
   text-transform: uppercase;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+  font-style: italic; }
 
 .textHP1 {
   color: #000000;
-  padding-top: 23%;
-  padding-left: 10px; }
+  padding-left: 10px;
+  margin-top: 100px; }
 
 .textHP2 {
   color: #FFFFFF;
@@ -347,6 +213,19 @@ body {
 
 .more {
   display: none; }
+
+.hpimg-2 {
+  width: 100%;
+  height: auto;
+  top: 48px; }
+
+.hpimg-4 {
+  width: 100%;
+  height: auto;
+  top: 48px; }
+
+.underline {
+  text-decoration: underline; }
 
 .chartText1 {
   margin-left: 10%; }
@@ -376,5 +255,164 @@ body {
   background-position: center;
   background-size: cover;
   background-image: url("/assets/images/Contact-Image/Hands-Charity.png"); }
+
+@media (min-width: 576px) {
+  /*Homepage*/
+  .textHP1 {
+    padding-top: 33%;
+    font-size: 26px; }
+
+  #hptextimg-1 {
+    width: 47%;
+    height: 156px;
+    left: 40px;
+    position: relative;
+    top: 24%;
+    z-index: 1; }
+
+  #hptextimg-2 {
+    width: 43%;
+    height: 147px;
+    top: -166px;
+    position: relative;
+    z-index: 0; }
+
+  #hptextimg-3 {
+    width: 47%;
+    height: 156px;
+    left: 40px;
+    position: relative;
+    top: 24%;
+    z-index: 1; }
+
+  #hptextimg-4 {
+    width: 43%;
+    height: 147px;
+    top: -8%;
+    position: relative;
+    z-index: 0; }
+
+  .headerGDP {
+    color: #FFFFFF;
+    position: relative;
+    top: 56px; }
+
+  .text2 {
+    font-size: 26px; }
+
+  .textGDP {
+    font-size: 26px;
+    padding-top: 0%;
+    position: relative;
+    padding-right: 10px;
+    color: #FFFFFF; }
+
+  .MotherTeresaQuote {
+    top: 135px;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    position: relative;
+    padding-bottom: 37px; }
+
+  .MotherTeresaImg {
+    width: 32%;
+    height: 129px;
+    top: 1px;
+    left: 70%;
+    border-radius: 20px; } }
+@media (min-width: 768px) {
+  /*Homepage*/
+  #hptextimg-1 {
+    height: 239px;
+    top: 38%;
+    left: 72px;
+    position: relative; }
+
+  #hptextimg-2 {
+    top: -53%;
+    height: 230px;
+    position: relative; }
+
+  #hptextimg-3 {
+    height: 239px;
+    top: 8%;
+    left: 72px;
+    position: relative; }
+
+  #hptextimg-4 {
+    top: -15%;
+    height: 230px;
+    position: relative; }
+
+  .header {
+    margin-top: 9px; }
+
+  .text {
+    font-size: 26px;
+    margin-top: 5%;
+    padding-right: 10px;
+    position: relative; }
+
+  .textGDP {
+    font-size: 26px;
+    top: 144px;
+    padding-right: 10px;
+    position: relative;
+    color: #FFFFFF; }
+
+  .MotherTeresaQuote {
+    font-size: 26px;
+    position: relative;
+    top: 156px;
+    padding-bottom: 197px; }
+
+  .MotherTeresaImg {
+    width: 54%;
+    height: 325px;
+    position: relative;
+    left: 57%;
+    top: -39px; }
+
+  .textHP1 {
+    margin-top: 0; }
+
+  .hpimg-2 {
+    top: 85px; }
+
+  .hpimg-4 {
+    top: 85px; } }
+@media (min-width: 1200px) {
+  /*Homepage*/
+  #hptextimg-1 {
+    height: 400px;
+    top: 41%;
+    left: 100px; }
+
+  #hptextimg-2 {
+    top: -50%;
+    height: 400px;
+    position: relative; }
+
+  .text {
+    font-size: 30px; }
+
+  .text2 {
+    font-size: 2em; }
+
+  .textGDP {
+    font-size: 2em; }
+
+  .textHP1 {
+    padding-top: 100px;
+    padding-left: 40px;
+    font-size: 26px;
+    margin-top: 100px; }
+
+  #hptextimg-3 {
+    height: 400px; }
+
+  #hptextimg-4 {
+    height: 400px; } }
 
 /*# sourceMappingURL=style.css.map */
