--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,5 @@
 @import "helpers/variables.scss";
 @import "helpers/mixins.scss";
-@import "helpers/media-queries.scss";
 @import "helpers/helpers.scss";
 
 @import "components/buttons.scss";
@@ -10,7 +9,10 @@
 @import "pages/homepage.scss";
 @import "pages/statistics.scss";
 @import "pages/map.scss";
-@import "pages/contact.scss"
+@import "pages/contact.scss";
+
+@import "helpers/media-queries.scss";
+
 
 
 
